WOW SO GOOD INPUT mmm such fried

--- a/videoproj/css/style.css
+++ b/videoproj/css/style.css
@@ -159,3 +159,18 @@
  .input-duration {
  	width: 100px;
  }
+ .search {
+ 	position: relative;
+ 	color: #aaa;
+ 	font-size: 16px;
+ }
+ .search input {
+ 	width: 370px;
+ 	height: 40px;
+ 	text-indent: 10px;
+ }
+ .search .fa-search { 
+ 	position: absolute;
+ 	top: 10px;
+ 	right: 10px;
+ }
