--- a/videoproj/css/style.css
+++ b/videoproj/css/style.css
@@ -14,6 +14,7 @@
  	font-family: Blisspro_medium; /* Гарнитура шрифта */
  	src: url(fonts/blisspro-medium.otf); /* Путь к файлу со шрифтом */
  }
+ 
  body {
  	font-family: OpenSans;
  }
@@ -28,10 +29,11 @@
  	font-size: 26px ;
  	margin-bottom: 40px;
  	margin-top: 40px;
+ 	color: #60647A
  }
  label {
  	font-family: OpenSans;
- 	color: #707386;
+ 	color: #9c9eab;
  }
  th  {
  	font-family: OpenSans_semibold;
@@ -40,6 +42,7 @@
  td {
  	font-family: OpenSans;
  	font-size: 13px;
+ 	color: #50546d;
  } 
  .table>thead>tr>th {
  	border-bottom: 1px solid #ddd
@@ -79,7 +82,8 @@
  	display: flex;
  	align-items: center;
  }
- .flex-auth-text { 	
+ .flex-auth-text { 
+ 	font-family: OpenSans_semibold;	
  	padding: 10px;
  	color: #b5c0fa;
  }
@@ -104,7 +108,7 @@
  	font-size: 10px;
  	height: 40px;
  	width: 130px;
- 	border-radius: 5px;
+ 	border-radius: 3px;
  	margin-right: 20px;
  	font-size: 13px; 	
  	font-family: OpenSans_semibold;  	
@@ -115,12 +119,17 @@
  	border : none; 	
  }
  .button-cancel {
- 	background-color: #f6511e;
- 	color: #ffffff;
- 	border : none;
+ 	background-color: #ffffff;
+ 	color: #f6511e;
+ 	border : 1px #f6511e solid;
  }
  .button-cancel_disabled {
  	cursor: not-allowed;
+ 	color: #D3D3D3;
+ }
+ .button-archive {
+ 	background-color: #f5f5f5;
+ 	border : 1px #D3D3D3 solid;
  	color: #D3D3D3;
  }
  .help-block {
