--- a/videoproj/css/style.css
+++ b/videoproj/css/style.css
@@ -127,10 +127,11 @@
  	cursor: not-allowed;
  	color: #D3D3D3;
  }
- .button-archive {
+ button.button-archive {
  	background-color: #f5f5f5;
  	border : 1px #D3D3D3 solid;
  	color: #D3D3D3;
+ 	cursor: not-allowed;
  }
  .help-block {
  	color: red;
@@ -151,11 +152,13 @@
  	margin-top: 30px; 	
  }
  .disabled{
- 	color : #D3D3D3;	 
+ 	color : #D3D3D3;
+ 	cursor: not-allowed;	 
  }
  .disabled .titlelink {
  	color : #D3D3D3;
  	pointer-events: none;
+ 	cursor: not-allowed;
  }
  .pagination-position {
  	display: flex;
